--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,10 @@
     }
   },
   "rules": {
-    "@typescript-eslint/explicit-function-return-type": 0
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "indent": [
+      "error",
+      2
+    ]
   }
 }
