--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
   },
   "rules": {
     "@typescript-eslint/explicit-function-return-type": 0,
+    "react/prop-types": 0,
     "indent": [
       "error",
       2
