--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "housework-todo-app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -26,11 +26,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf ../backend/build-react && react-scripts build && cp -r build ../backend/build-react",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
-    "start:backend": "json-server --port 3001 --watch db.json"
+    "lint": "eslint './src/**/*.{ts,tsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +51,6 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
