--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "ts-node": "ts-node",
     "build": "tsc",
-    "start": "node build/index.js",
-    "dev": "ts-node-dev index.ts",
+    "start": "NODE_ENV=production node build/index.js",
+    "dev": "NODE_ENV=development ts-node-dev index.ts",
     "start:json": "json-server --port 3002 --watch db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "senbeiman",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -23,6 +25,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "json-server": "^0.16.3"
   }
